# vidi-pr

./: .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
.github/: vidi-pr.yml
.github/workflows/: ci.yml
src/vidi_pr/: __main__.py  errors.py
src/vidi_pr/config/: defaults.py  operator.py  repo.py
src/vidi_pr/llm/: client.py  errors.py  types.py
src/vidi_pr/models/: review.py  storage.py
src/vidi_pr/orchestration/: authz.py  handlers.py  locks.py  triggers.py
src/vidi_pr/pipeline/: chunking.py  failure.py  fetcher.py  parsing.py  reviewer.py  worker.py
src/vidi_pr/prompts/: composer.py  footer.py  loader.py  review_user.md  synthesis.md  system.md
src/vidi_pr/prompts/languages/: __init__.py  bash.md  c.md  cpp.md  drupal.md  generic.md  javascript.md  kotlin.md  php.md  python.md  sql.md  typescript.md  yaml.md
src/vidi_pr/prompts/strictness/: __init__.py  lenient.md  normal.md  strict.md
src/vidi_pr/storage/: db.py  dedup.py  failures.py  jobs.py  locks.py  recovery.py  reviews.py
src/vidi_pr/storage/alembic/: env.py  script.py.mako
src/vidi_pr/storage/alembic/versions/: 20260512_0001_initial.py
src/vidi_pr/transport/: auth.py  errors.py  github_client.py  logging_setup.py  server.py  webhook.py
tests/: conftest.py  test_config_operator.py  test_config_repo.py  test_integration_e2e.py  test_llm_client.py  test_llm_mock.py  test_orchestration_authz.py  test_orchestration_handlers.py  test_orchestration_triggers.py  test_pipeline_chunking.py  test_pipeline_failure.py  test_pipeline_fetcher.py  test_pipeline_parsing.py  test_pipeline_reviewer.py  test_pipeline_worker.py  test_prompts_composer.py  test_prompts_footer.py  test_prompts_languages.py  test_prompts_loader.py  test_prompts_system.py  test_smoke.py  test_storage_dedup.py  test_storage_jobs.py  test_storage_locks.py  test_storage_migrations.py  test_storage_recovery.py  test_storage_reviews.py  test_transport_auth.py  test_transport_github_client.py  test_transport_webhook.py
tests/mocks/: github.py  llm.py
