[project]
name = "vidi-pr"
version = "0.1.0"
description = "Self-hosted GitHub App that performs LLM-based code reviews on pull requests."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "stylesuxx" }]
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "httpx>=0.28.1",
    "pathspec>=1.1.1",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyyaml>=6.0.3",
    "sqlalchemy[asyncio]>=2.0.49",
    "tenacity>=9.1.4",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.12",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.1.0",
    "pytest-httpx>=0.36.2",
    "pre-commit>=4.6.0",
    "types-PyYAML>=6.0.12",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vidi_pr"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "F",     # pyflakes
    "W",     # pycodestyle warnings
    "B",     # flake8-bugbear
    "UP",    # pyupgrade
    "SIM",   # flake8-simplify
    "RUF",   # ruff-specific rules
    "ASYNC", # flake8-async
    "PTH",   # flake8-use-pathlib
    "I",     # isort
]

[tool.mypy]
strict = true
python_version = "3.14"
files = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "--strict-config", "--strict-markers"]
asyncio_mode = "auto"
